# aires-ganglionnaires

./: .gitignore  aires-ganglionnaires-cervicales.ipynb  get-aires-ganglionnaires.py  library.py  lymph-node-levels-specs.py  lymph_node_levels_specs.py  pyproject.toml
aires_ganglionnaires/: __init__.py  constants.py  library.py  utils.py
medsam/: medsam-rpa.ipynb  medsam.ipynb
seggpt/: seggpt-rpa.ipynb  seggpt.ipynb
train-models/: infer-medsam.py  infer-unet-rpa-2d.py  infer-unet-rpa-3d.py  train-fully-supervised.py  train-unet-rpa-2d.py  train-unet-rpa-3d.py  train-unet-rpa.py  train-weakly-supervised.py  train_one_gpu_rpa_dataset.py  train_one_gpu_rpa_dataset_gtboxes4train.py  weakly-supervised-cam.ipynb  weakly-supervised.ipynb  weakly_supervised_library.py
