[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aires-ganglionnaires"
version = "0.0.1"

dependencies = [
    "numpy>=1",
    "torch>=2",
    "nibabel>=5",
    "nilearn",
    "scikit-image",
]

[tool.setuptools]
packages = ["aires_ganglionnaires"]

